Fixed z-index

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -84,7 +84,7 @@ h3 {
     position: fixed;
     top: 3px;
     right: 0px;
-    z-index: 30;
+    z-index: 30000;
     text-align: right;
     padding: 2px;
     max-width: 73vw;
